--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -2,6 +2,10 @@
   text-align: center !important;
 }
 
+.u-margin-top-small {
+  margin-top: 1.5rem !important;
+}
+
 .u-margin-bottom-small {
   margin-bottom: 1.5rem !important;
 }
