--- a/sass/components/_bg-video.scss
+++ b/sass/components/_bg-video.scss
@@ -6,6 +6,10 @@
     width: 100%;
     z-index: -1;
     opacity: 0.15;
+    transform: skewY(-7deg);
+    & > * {
+        transform: skewY(7deg);
+    }
 
     &_content {
         height: 100%;
