--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -3,11 +3,8 @@
     &:link,
     &:visited {
       font-family: "Poppins", sans-serif;
-      font-size: 3.6rem;
-      font-weight: 700;
-      text-transform: uppercase;
       text-decoration: none;
-      padding: 1rem 8rem;
+      
       border-radius: 10px;
       display: inline-block;
       position: relative;
@@ -17,10 +14,14 @@
       // Change for the <button> element
       border: none;
       cursor: pointer;
+
+      @include respond(phone){
+        padding: 1rem;
+      }
     }
   
     &:hover {
-      transform: translateY(-3px);
+      // transform: translateY(-3px);
       box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
     }
     
@@ -43,6 +44,17 @@
     
       transition: all 0.4s;
     }
+
+    &--main {
+      font-size: 3.6rem;
+      text-transform: uppercase;
+      font-weight: 700;
+      padding: 1rem 8rem;
+
+      @include respond(phone){
+        font-size: 1.8rem;
+      }
+    }
   
     &--white {
       background-color: $color-white;
@@ -59,6 +71,18 @@
 
       &::after {
         background-color: $color-primary;
+      }
+    }
+
+    &-cta {
+      border: 1px solid $color-primary;
+      background-color: $color-white;
+      color: $color-primary;
+      font-size: 2rem;
+
+      &:hover {
+        background-color: $color-primary;
+        color: $color-white;
       }
     }
 
