--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -10,15 +10,31 @@
     &_logo-box {
         text-align: center;
         margin-bottom: 8rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
 
+        
         @include respond(tab-port){
             margin-bottom: 6rem;
         }
+
+        
+    }
+
+    &_text {
+        font-family: "Roboto", sans-serif;
+        color: $color-white;
+        font-size: 3.6rem;
+        font-weight: 700;
     }
 
     &_logo {
-        width: 15rem;
+        width: 10rem;
         height: auto;
+
+        
     }
 
     &_navigation {
@@ -65,7 +81,7 @@
         border-top: 1px solid $color-gray-dark;
         padding-top: 2rem;
         text-align: justify;
-        width: 80%;
+        width: 100%;
         float: left;
 
         @include respond(tab-port){
