--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -23,6 +23,11 @@
         gap: 1rem;
         width: 100%;
         z-index: 3000;
+
+        @include respond(phone){
+            flex-direction: column;
+            align-items: center;
+        }
     }
 
     &:not(:last-child) {
