--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -25,9 +25,10 @@ body {
 
     animation: moveFromLeft 2s ease-out;
 
-    @include respond(phone){
+    @include respond(tab-port){
       font-size: 5rem;
     }
+
 
     /* animation-name: moveFromLeft;
         animation-duration: 2s;
@@ -47,8 +48,12 @@ body {
     animation: moveFromRight 2s ease-out;
 
     @include respond(phone){
-      font-size: 2rem;
-      margin-bottom: 2rem;
+      font-size: 1.5rem;
+    }
+
+    @include respond(tab-port){
+      font-size: 2.5rem;
+      margin-bottom: 1.8rem;
     }
 
     /* animation-name: moveFromRight;
@@ -74,7 +79,7 @@ body {
   transition: all 0.5s;
 
   @include respond(tab-port){
-    font-size: 2.5rem;
+    font-size: 2.2rem;
   }
 
 
