--- a/sass/components/_new-card.scss
+++ b/sass/components/_new-card.scss
@@ -1,28 +1,42 @@
 .new-card {
-  perspective: 150rem;
-  -moz-perspective: 150rem;
+  // perspective: 150rem;
+  // -moz-perspective: 150rem;
   position: relative;
   height: 52rem;
   width: 100%;
 
+
   &:first-child {
     margin-left: 3rem;
+    @include respond(tab-port){
+    margin-left: 0;
+    }
   }
 
   &:last-child {
     margin-right: 3rem;
+    @include respond(tab-port){
+      margin-right: 0;
+    }
+
   }
 
   &_text {
     background-color: $color-white;
     padding: 3rem 0;
     width: 100%;
-    height: 60vh;
+    height: 75vh;
     position: absolute;
-    top: 6rem;
+    top: 4rem;
     transform: skewY(-7deg);
     & > * {
       transform: skewY(7deg);
+    }
+
+    @include respond(tab-port){
+      height: 68vh;
+      top: 5.5rem;
+      padding: 4rem 0;
     }
   }
 
