--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,6 +2,7 @@
     background-color: $color-gray-dark-3;
     padding: 10rem 0;
     font-size: 1.4rem;
+    width: 100%;
 
     @include respond(tab-port){
         padding: 8rem 0;
@@ -41,6 +42,11 @@
         border-top: 1px solid $color-gray-light-2;
         padding-top: 2rem;
 
+        @include respond(phone){
+            border-top: none;
+            padding: 2rem;
+        }
+
         @include respond(tab-port){
             width: 100%;
             text-align: center;
@@ -78,14 +84,18 @@
     }
 
     &_copyright {
+        
         border-top: 1px solid $color-gray-dark;
         padding-top: 2rem;
-        text-align: justify;
+        text-align: left;
         width: 100%;
         float: left;
 
+
         @include respond(tab-port){
             width: 100%;
+            text-align: center;
+            border-top: none;
 
         }
     }
