--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,6 +1,7 @@
 .header {
     position: relative;
-    height: 95vh;
+    height: 100vh;
+    width: 100%;
     background-image: linear-gradient(
         to right, rgba($bg-gray-light, 0.8), rgba($bg-gray-dark, 0.8)
       ),
@@ -29,11 +30,11 @@
     }
 
   
-    &__logo-box {
-      position: absolute;
-      top: 40px;
-      left: 40px;
-    }
+    // &__logo-box {
+    //   position: absolute;
+    //   top: 40px;
+    //   left: 40px;
+    // }
   
     &__logo-box img.logo {
       height: 35px;
@@ -42,9 +43,9 @@
     &__text-box {
       position: absolute;
       width: 100%;
-      top: 40%;
-      left: 50%;
-      transform: translate(-50%, -40%);
+      top: 32%;
+      // left: 50%;
+      // transform: translate(-50%, -40%);
       text-align: center;
     }
   }
