--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -13,21 +13,25 @@
   transform: translateX(-50%);
   background-color: $color-gray-light-1;
   padding: 5rem 3rem;
-  margin-top: -25rem;
+  margin-top: -15rem;
   width: 119rem;
   height: 55rem;
   z-index: 100;
   border-radius: 10px;
 
-  @include respond(phone){
+
+  @include respond(tab-port){
     position: relative;
     left: 0;
     transform: translateX(0);
     width: 100%;
+    height: 70rem;
     margin-top: 0rem;
     padding: 5rem 3rem;
   }
 
+
+  
   // @include respond(tab-port) {
   //   padding: 20rem 8rem;
   // }
@@ -38,7 +42,7 @@
 .section-features {
   position: relative;
   width: 100%;
-  padding: 35rem 0 15rem;
+  padding: 45rem 0 15rem;
 
   background-image: linear-gradient(
       to right,
@@ -57,14 +61,11 @@
   //   transform: skewY(7deg);
   // }
 
-  @include respond(phone){
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-  }
-
 
   @include respond(tab-port) {
+    margin-top: 0;
     padding: 10rem 0;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
   }
 
 
@@ -76,7 +77,7 @@
 
 
   @include respond(tab-port) {
-    padding: 20rem 0 10rem 0;
+    padding: 5rem 0 10rem 0;
   }
 }
 
