--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -80,6 +80,7 @@
       background-color: $color-white;
       color: $color-primary;
       font-size: 2rem;
+      padding: 1rem 6rem;
 
       &:hover {
         background-color: $color-primary;
