--- a/sass/components/_new-card.scss
+++ b/sass/components/_new-card.scss
@@ -6,28 +6,28 @@
   width: 100%;
 
 
-  &:first-child {
-    margin-left: 3rem;
-    @include respond(tab-port){
-    margin-left: 0;
-    }
-  }
+  // &:first-child {
+  //   margin-left: 3rem;
+  //   @include respond(tab-port){
+  //   margin-left: 0;
+  //   }
+  // }
 
-  &:last-child {
-    margin-right: 3rem;
-    @include respond(tab-port){
-      margin-right: 0;
-    }
+  // &:last-child {
+  //   margin-right: 3rem;
+  //   @include respond(tab-port){
+  //     margin-right: 0;
+  //   }
 
-  }
+  // }
 
   &_text {
     background-color: $color-white;
     padding: 3rem 0;
     width: 100%;
-    height: 75vh;
+    height: 70vh;
     position: absolute;
-    top: 4rem;
+    top: 3rem;
     transform: skewY(-7deg);
     & > * {
       transform: skewY(7deg);
@@ -107,7 +107,7 @@
     }
 
     &--back {
-      transform: rotateY(180deg);
+      // transform: rotateY(180deg);
 
 
       &-1 {
@@ -134,21 +134,21 @@
   }
 
   &:hover &_side--front-1, &:hover &_side--front-2, &:hover &_side--front-3 {
-    transform: rotateY(-180deg);
+    // transform: rotateY(-180deg);
   }
 
   &:hover &_side--back {
-    transform: rotateY(0);
+    // transform: rotateY(0);
   }
 
   // Back-side Styling
   &_cta {
     background-color: $color-white;
-    padding: 12rem 0;
+    padding: 15rem 0;
     width: 100%;
-    height: 60vh;
+    height: 70vh;
     position: absolute;
-    top: 6rem;
+    top: 3rem;
     text-align: center;
 
     background-color: $color-white;
