--- a/sass/components/_new-card.scss
+++ b/sass/components/_new-card.scss
@@ -107,7 +107,7 @@
     }
 
     &--back {
-      // transform: rotateY(180deg);
+      transform: rotateY(180deg);
 
 
       &-1 {
@@ -134,11 +134,11 @@
   }
 
   &:hover &_side--front-1, &:hover &_side--front-2, &:hover &_side--front-3 {
-    // transform: rotateY(-180deg);
+    transform: rotateY(-180deg);
   }
 
   &:hover &_side--back {
-    // transform: rotateY(0);
+    transform: rotateY(0);
   }
 
   // Back-side Styling
