--- a/css/style.css
+++ b/css/style.css
@@ -348,6 +348,8 @@ body {
     transform: translateY(-1.5rem) scale(1.03); }
 
 .new-card {
+  perspective: 150rem;
+  -moz-perspective: 150rem;
   position: relative;
   height: 52rem;
   width: 100%; }
@@ -409,18 +411,24 @@ body {
       background-image: url(../../img/Pulse/_pricing-team.jpg);
       background-size: cover;
       background-position: right; }
-    .new-card_side--back-1 {
-      background-image: url(../../img/Pulse/_pricing-starter.jpg);
-      background-size: cover;
-      background-position: left; }
-    .new-card_side--back-2 {
-      background-image: url(../../img/Pulse/_pricing-individual.jpg);
-      background-size: cover;
-      background-position: left; }
-    .new-card_side--back-3 {
-      background-image: url(../../img/Pulse/_pricing-team.jpg);
-      background-size: cover;
-      background-position: left; }
+    .new-card_side--back {
+      transform: rotateY(180deg); }
+      .new-card_side--back-1 {
+        background-image: url(../../img/Pulse/_pricing-starter.jpg);
+        background-size: cover;
+        background-position: left; }
+      .new-card_side--back-2 {
+        background-image: url(../../img/Pulse/_pricing-individual.jpg);
+        background-size: cover;
+        background-position: left; }
+      .new-card_side--back-3 {
+        background-image: url(../../img/Pulse/_pricing-team.jpg);
+        background-size: cover;
+        background-position: left; }
+  .new-card:hover .new-card_side--front-1, .new-card:hover .new-card_side--front-2, .new-card:hover .new-card_side--front-3 {
+    transform: rotateY(-180deg); }
+  .new-card:hover .new-card_side--back {
+    transform: rotateY(0); }
   .new-card_cta {
     background-color: #fff;
     padding: 15rem 0;
